--- a/blog/templates/blog/installationrecord_form.html
+++ b/blog/templates/blog/installationrecord_form.html
@@ -1,4 +1,4 @@
-{% extends "blog/base4.html" %}
+{% extends "blog/base.html" %}
 {% load crispy_forms_tags %}
 {% block content %}
 <title>Advamed - Request Record</title>
